--- a/src/main/resources/conf.properties
+++ b/src/main/resources/conf.properties
@@ -1,4 +1,4 @@
-datasource_write_url=jdbc:postgresql://127.0.0.1:5432/gr_database
-datasource_read_url=jdbc:postgresql://127.0.0.1:5432/gr_database
-repl_user=postgres
+datasource_write_url=jdbc:postgresql://10.10.104.61:5432/postgis_grc_database
+datasource_read_url=jdbc:postgresql://10.10.104.62:5432/postgis_grc_database
+grc_user=grc
 password=123456
