--- a/src/main/resources/conf.properties
+++ b/src/main/resources/conf.properties
@@ -3,7 +3,7 @@
 #rc_user=grc
 #assword=123456
 
-datasource_write_url=jdbc:postgresql://127.0.0.1:5432/gr_database
-datasource_read_url=jdbc:postgresql://127.0.0.1:5432/gr_database
+datasource_write_url=jdbc:postgresql://127.0.0.1:5432/rq_database
+datasource_read_url=jdbc:postgresql://127.0.0.1:5432/rq_database
 grc_user=postgres
 password=123456
